--- a/tester/src/test/python/spinal/SdramXdr/Ddr3S7Tester/Makefile
+++ b/tester/src/test/python/spinal/SdramXdr/Ddr3S7Tester/Makefile
@@ -1,5 +1,6 @@
 
-VERILOG_SOURCES += $(SPINALROOT)/SdramXdrDdr3S7TesterCocotbTop.v ddr3.v OSERDESE2.v IOBUFDS.v OBUFDS.v glbl.v
+VERILOG_SOURCES += $(SPINALROOT)/SdramXdrDdr3S7TesterCocotbTop.v ddr3.v
+# OSERDESE2.v IOBUFDS.v OBUFDS.v glbl.v
 #$(UNISIM)/OSERDESE2.v $(UNISIM)/IOBUFDS.v $(UNISIM)/OBUFDS.v
 TOPLEVEL=SdramXdrDdr3S7TesterCocotbTop
 MODULE=Ddr3S7Tester
