--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
       script: ./travis.sh -c
       deploy:
         provider: script
-        skip_cleanup: true
+        cleanup: false
         script: ./travis.sh -d
         on:
           repo: SpinalHDL/SpinalHDL
