--- a/.gitignore
+++ b/.gitignore
@@ -63,10 +63,10 @@ log.txt
 simWorkspace/
 tmp/
 null/
-sim/yolo
 command
 
 sim/simulation_plugins/*
 !sim/simulation_plugins/.gitignore
-sim/simulation_plugins/*
-!sim/simulation_plugins/yolo
+sim/yolo/*
+!sim/yolo/adder.vhd
+!sim/yolo/adder.v
