Add Makefile.inc which is also needed

--- a/tester/src/test/python/spinal/Dummy/Makefile
+++ b/tester/src/test/python/spinal/Dummy/Makefile
@@ -12,4 +12,5 @@ endif
 
 MODULE=Dummy
 
+include $(shell cocotb-config --makefiles)/Makefile.inc
 include $(shell cocotb-config --makefiles)/Makefile.sim
