use cocotb-config for remaining Makefiles

--- a/tester/src/test/python/spinal/TopLevel/Makefile
+++ b/tester/src/test/python/spinal/TopLevel/Makefile
@@ -1,5 +1,5 @@
 VERILOG_SOURCES =  $(PWD)/dump.v $(PWD)/../../../../../TopLevel.v
 TOPLEVEL=TopLevel
 MODULE=main
-include $(COCOTB)/makefiles/Makefile.inc
-include $(COCOTB)/makefiles/Makefile.sim
+include $(shell cocotb-config --makefiles)/Makefile.inc
+include $(shell cocotb-config --makefiles)/Makefile.sim
