--- a/tester/src/test/python/spinal/common/Makefile.sim
+++ b/tester/src/test/python/spinal/common/Makefile.sim
@@ -8,8 +8,8 @@ ifeq ($(TOPLEVEL_LANG),vhdl)
 endif
 
 
-include $(COCOTB)/makefiles/Makefile.inc
-include $(COCOTB)/makefiles/Makefile.sim
+include $(shell cocotb-config --makefiles)/Makefile.inc
+include $(shell cocotb-config --makefiles)/Makefile.sim
 
 
 #$(info *** Base path :  ${COMMON_PATH} )
