Only set SIM_ARGS to disable ieee asserts when simulation VHDL

--- a/tester/src/test/python/spinal/common/Makefile.def
+++ b/tester/src/test/python/spinal/common/Makefile.def
@@ -1,3 +1,6 @@
 TOPLEVEL_LANG ?= verilog
 
-SIM_ARGS += --ieee-asserts=disable
+# ghdl specific args
+ifeq ($(TOPLEVEL_LANG),vhdl)
+	SIM_ARGS += --ieee-asserts=disable
+endif
