--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -50,7 +50,7 @@ jobs:
       run: source tools.sh && (cd ~/ && install_tools) && purge_cocotb
 
     - name: Fixup
-      run: source tools.sh && (cd ~/ && install_cocotb) && purge_cocotb
+      run: source tools.sh && (cd ~/ && install_cocotb) && sudo apt install -y gnat-9  libgnat-9 zlib1g-dev libboost-dev && purge_cocotb
 
     - name: Compile tests
       run: ls #&& sbt test:compile
