--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -53,7 +53,7 @@ jobs:
       run: source tools.sh && install_packages
 
     - name: Compile tests
-      run: source tools.sh && (cd ~/ && install_cocotb) &&  purge_cocotb #sbt test:compile
+      run: source tools.sh && purge_cocotb #sbt test:compile
 
     - name: Run tests
       run: ls #sbt test
