--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -13,6 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: 'recursive'
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
