--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -60,4 +60,4 @@ jobs:
       run: sbt test:compile
 
     - name: Run tests
-      run: sbt "testOnly *StreamTesterCocotbBoot"
+      run: sbt "testOnly *Cocotb*"
