on all branches

--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -1,10 +1,6 @@
 name: Scala CI
 
-on:
-  push:
-    branches: [ gitaction ]
-  pull_request:
-    branches: [ gitaction ]
+on: [push, pull_request]
 
 jobs:
   build:
