--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -49,11 +49,32 @@ jobs:
       if: steps.tools.outputs.cache-hit != 'true'
       run: source tools.sh && install_packages && (cd ~/ && install_tools) && purge_cocotb
 
+
+    - name: Cache fpga_toolchain
+      id: fpga_toolchain
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/tools
+        key: ${{ runner.os }}-fpga_toolchain_v1
+
+    - name: Setup env fpga_toolchain
+      run: echo "$HOME/fpga-toolchain/bin" >> $GITHUB_PATH
+
+    - name: Install fpga_toolchain
+      if: steps.fpga_toolchain.outputs.cache-hit != 'true'
+      run: source tools.sh && (cd ~/ && install_fpga_toolchain)
+
+
     - name: Install uncached tools
       run: source tools.sh && install_packages && (cd ~/ && install_cocotb) && purge_cocotb
 
-    - name: Compile tests
-      run: sbt "+test:compile"
 
-    - name: Run tests
-      run: sbt "++2.11.12; test"
+    - name: Formal temp
+      run: sbt "testOnly *SpinalPhaseVerifier*"
+
+    #- name: Compile tests
+#      run: sbt "+test:compile"
+
+ #   - name: Run tests
+#      run: sbt "++2.11.12; test"
