--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -34,6 +34,15 @@ jobs:
           ~/.sbt
         key: ${{ runner.os }}-sbt-${{ hashFiles('**/build.sbt') }}
 
+    ##############################################
+
+    - name: Setup env
+      run: |
+        echo "$HOME/fpga-toolchain/bin" >> $GITHUB_PATH
+        echo "$HOME/tools/bin" >> $GITHUB_PATH
+
+    ##############################################
+
     - name: Cache tools
       id: tools
       uses: actions/cache@v2
@@ -42,13 +51,11 @@ jobs:
           ~/tools
         key: ${{ runner.os }}-tools_v3
 
-    - name: Setup env
-      run: echo "$HOME/tools/bin" >> $GITHUB_PATH
-
     - name: Install cached tools
       if: steps.tools.outputs.cache-hit != 'true'
       run: source tools.sh && install_packages && (cd ~/ && install_tools) && purge_cocotb
 
+    ##############################################
 
     - name: Cache fpga_toolchain
       id: fpga_toolchain
@@ -58,13 +65,11 @@ jobs:
           ~/tools
         key: ${{ runner.os }}-fpga_toolchain_v1
 
-#    - name: Setup env fpga_toolchain
-#      run: echo "$HOME/fpga-toolchain/bin" >> $GITHUB_PATH
-
     - name: Install fpga_toolchain
       if: steps.fpga_toolchain.outputs.cache-hit != 'true'
       run: source tools.sh && (cd ~/ && install_fpga_toolchain)
 
+    ##############################################
 
     - name: Install uncached tools
       run: source tools.sh && install_packages && (cd ~/ && install_cocotb) && purge_cocotb
